--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,6 +1,7 @@
 // Home Content
 
 .home {
+/* avoid content overlay on fixed nav */  margin-top: 9.67rem;
   header {
     img {
       border-radius: .5rem;
@@ -103,6 +104,10 @@
         .buttonCustom(10rem,3.5rem,@ebony-clay,@porcelain);
         font-size: 1.8rem;
         font-weight: bold;
+        &:hover {
+          color: @ebony-clay;
+          background: @porcelain;
+        }
 
         @media @mobile {
           width: 100%;
