--- a/less/navigation.less
+++ b/less/navigation.less
@@ -6,6 +6,11 @@
     background: @wild-sand;
     .flexCenter();
     flex-direction: column;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    margin-bottom: 2rem;
+
     h1 {
         font-size: 4rem;
         padding-top: 1rem;
@@ -15,6 +20,7 @@
         padding: 1.7rem 0 1.3rem 0;
         width: 31%;
         font-size: 1.6rem;
+        min-width: 34rem;
         a {
             text-decoration: none;
             color: @ebony-clay;
